# buda-portfolio

./: .gitignore  Dockerfile  README.md  hello.py  pyproject.toml
src/: main.py
src/portfolio/: service.py
src/portfolio/providers/price/: interface.py
src/portfolio/providers/price/buda/: client.py  models.py  provider.py
src/rest/: router.py
src/rest/schemas/request/: portfolio.py
src/rest/schemas/responses/: portfolio.py
src/shared/: http_client.py  types.py
tests/integration/: test_api.py
